--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+2.071 2014-03-10
+  * Added find_monotonic_first (Util).
+
 2.063 2014-02-11
   * Renamed selectall_hashref -> selectall_arrayref_hashref (Connector).
   * Fixed docn typo (Connector).
