--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+2.073 2014-03-18
+  * Fixed documentation (Connector).
+
 2.072 2014-03-13
   * Added documentation (Util).
 
@@ -5,7 +8,7 @@
   * Added find_monotonic_first (Util).
 
 2.063 2014-02-11
-  * Renamed selectall_hashref -> selectall_arrayref_hashref (Connector).
+  * Renamed selectall_hashref -> selectall_arrayref_hashrefs (Connector).
   * Fixed docn typo (Connector).
 
 2.051 2014-02-09
