--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+2.101 2014-07-14
+  * Fixed use bug (Replication).
+  * Added documentation (Replication).
+  * Added basic tests (Replication).
+
 2.091 2014-07-10
   * Added new package (Replication).
   * Made names more consistent, s/process/thread/ (Connector,Replication).
